Set up basic containers and bg color styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,12 @@
   </head>
   <body>
     <div id="content">
-      <div class="hero">
+      <header class="hero">
         <h1 class="hero-heading">The Memory Palace</h1>
         <div class="hero-caption">Master your to-dos</div>
-      </div>
+      </header>
+      <nav class="taskbar"></nav>
+      <div class="tasks"></div>
     </div>
   </body>
 </html>
