--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
         <div class="hero-caption">Master your to-dos</div>
       </header>
       <nav class="taskbar"></nav>
-      <div class="tasks"></div>
+      <div class="tasks">
+        <button class="add-task">+</button>
+        <div class="task">Sample Task</div>
+      </div>
     </div>
   </body>
 </html>
