Set up taskbar elements

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,17 @@
         <h1 class="hero-heading">The Memory Palace</h1>
         <div class="hero-caption">Master your to-dos</div>
       </header>
-      <nav class="taskbar"></nav>
+      <nav class="taskbar">
+        <div class="general-tasks">
+          <div class="today">Today</div>
+          <div class="upcoming">Upcoming</div>
+          <div class="everything">Everything</div>
+        </div>
+        <div class="projects-todo">
+          <h3 class="projects">Projects</h3>
+          <button class="add-project-btn">+ Project</button>
+        </div>
+      </nav>
       <div class="tasks">
         <button class="add-task">+</button>
       </div>
