Turn taskbar elements to buttons

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
       </header>
       <nav class="taskbar">
         <div class="general-tasks">
-          <div class="everything">Everything</div>
-          <div class="today">Today</div>
-          <div class="upcoming">Upcoming</div>
+          <button class="everything-btn">Everything</button>
+          <button class="today-btn">Today</button>
+          <button class="upcoming-btn">Upcoming</button>
         </div>
         <div class="projects-todo">
           <h3 class="projects">Projects</h3>
