Relocate add tasks btn

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,11 @@
           <h3 class="projects">Projects</h3>
           <button class="add-project-btn">+ Project</button>
         </div>
+        <div class="add-btn-container">
+          <button class="add-task">+</button>
+        </div>
       </nav>
-      <div class="tasks">
-        <button class="add-task">+</button>
-      </div>
+      <div class="tasks"></div>
     </div>
   </body>
 </html>
