Implement notes feature

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,9 @@
           <button class="today-btn">Today</button>
           <button class="upcoming-btn">Upcoming</button>
         </div>
+        <div class="notes-btn-container">
+          <button class="notes-btn">Notes</button>
+        </div>
         <div class="projects-todo">
           <h3 class="projects">Projects</h3>
           <button class="add-project-btn">+ Project</button>
