Add minor change

--- a/src/index.html
+++ b/src/index.html
@@ -13,19 +13,19 @@
       </header>
       <nav class="taskbar">
         <div class="add-btn-container">
-          <button class="add-task">+</button>
+          <button class="add-task taskbar-btn">+ Task</button>
         </div>
         <div class="general-tasks">
-          <button class="everything-btn">Everything</button>
-          <button class="today-btn">Today</button>
-          <button class="upcoming-btn">Upcoming</button>
+          <button class="everything-btn taskbar-btn">Everything</button>
+          <button class="today-btn taskbar-btn">Today</button>
+          <button class="upcoming-btn taskbar-btn">Upcoming</button>
         </div>
         <div class="notes-btn-container">
-          <button class="notes-btn">Notes</button>
+          <button class="notes-btn taskbar-btn">Notes</button>
         </div>
         <div class="projects-todo">
           <h3 class="projects">Projects</h3>
-          <button class="add-project-btn">+ Project</button>
+          <button class="add-project-btn taskbar-btn">+ Project</button>
         </div>
       </nav>
       <div class="tasks"></div>
